Doc/force-app/main/default/objects/Success_Criteria__c/Success_Criteria__c.object-meta.xml
<CustomObject>
    <label>Success Criteria</label>
    <nameField>
        <label>Success Criteria Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Success Criteria</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>