Doc/force-app/main/default/objects/Success_Criteria__c/fields/Client_Contact_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Client_Contact_Snapshot__c</fullName>
    <description>SC-000049</description>
    <label>Client Contact Snapshot</label>
    <length>255</length>
    <type>Text</type>
</CustomField>