Doc/force-app/main/default/objects/Success_Criteria__c/fields/Criteria_Category__c.field-meta.xml
<CustomField>
    <fullName>Criteria_Category__c</fullName>
    <description>SC-000049</description>
    <label>Criteria Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deliver on time</fullName>
            </value>
            <value>
                <fullName>Deliver on budget</fullName>
            </value>
            <value>
                <fullName>Deliver on scope</fullName>
            </value>
            <value>
                <fullName>Integrate rules moved to production and operating effectively for data processes</fullName>
            </value>
            <value>
                <fullName>Workflows moved to production and operating effectively for end users</fullName>
            </value>
            <value>
                <fullName>Rolled out firm-wide or to intended population of end users</fullName>
            </value>
            <value>
                <fullName>Adopted successfully by acceptable and high proportion of intended end users</fullName>
            </value>
            <value>
                <fullName>Use of the solution has become a normal way of working at the firm</fullName>
            </value>
            <value>
                <fullName>The previous solution has been decommissioned and is no longer in use</fullName>
            </value>
            <value>
                <fullName>Increase profitability of alternative fee agreements by x%</fullName>
            </value>
            <value>
                <fullName>Reduce time before new hires can start billing by x%</fullName>
            </value>
            <value>
                <fullName>x% faster lateral hire clearance</fullName>
            </value>
            <value>
                <fullName>Reduce bad debt as a percent of revenue by x%</fullName>
            </value>
            <value>
                <fullName>Reduce time spent by attorneys submitting time by x hours per week</fullName>
            </value>
            <value>
                <fullName>Reduce time between time submission and cash collection by x%</fullName>
            </value>
            <value>
                <fullName>Improvement in realization rates by x%</fullName>
            </value>
            <value>
                <fullName>Reduce Time spent opening a new client or matter by x%</fullName>
            </value>
            <value>
                <fullName>Reduce time and cost for IT to implement policy changes by x%</fullName>
            </value>
            <value>
                <fullName>Reduce time spent on conflict searches by x%</fullName>
            </value>
            <value>
                <fullName>Reduce increase in indemnity insurance premium by x% points</fullName>
            </value>
            <value>
                <fullName>Decrease client defection by x% points</fullName>
            </value>
            <value>
                <fullName>Attorneys capture an incremental x hours per month</fullName>
            </value>
            <value>
                <fullName>Not Listed - Submit to CSM Ops for addition</fullName>
            </value>
            <value>
                <fullName>Attorneys capture incremental x hours per month</fullName>
                <isActive>false</isActive>
                <label>Attorneys capture incremental x hours per month</label>
            </value>
            <value>
                <fullName>Decrease client defection by x% points by providing a system that is reliable and dependable</fullName>
                <isActive>false</isActive>
                <label>Decrease client defection by x% points by providing a system that is reliable and dependable</label>
            </value>
            <value>
                <fullName>Deliver on scope and budget</fullName>
                <isActive>false</isActive>
                <label>Deliver on scope and budget</label>
            </value>
            <value>
                <fullName>Deliver on time and budget</fullName>
                <isActive>false</isActive>
                <label>Deliver on time and budget</label>
            </value>
            <value>
                <fullName>Deliver on time and scope</fullName>
                <isActive>false</isActive>
                <label>Deliver on time and scope</label>
            </value>
            <value>
                <fullName>Reduce Time spent opening a new client or matter by x% and improve efficiency in process via streamlining of functions</fullName>
                <isActive>false</isActive>
                <label>Reduce Time spent opening a new client or matter by x% and improve efficiency in process via streamlining of functions</label>
            </value>
            <value>
                <fullName>Reduce Time spent opening a new client or matter by x% and provide better integration of data thus reducing the number of issues caused by data errors and increasing overall efficiencies</fullName>
                <isActive>false</isActive>
                <label>Reduce Time spent opening a new client or matter by x% and provide better integration of data thus reducing the number of issues caused by data errors and increasing overall efficiencies</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>