Doc/force-app/main/default/objects/Success_Criteria__c/fields/Criteria_Category_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Criteria_Category_Snapshot__c</fullName>
    <description>SC-000049</description>
    <label>Criteria Category Snapshot</label>
    <length>255</length>
    <type>Text</type>
</CustomField>