Doc/force-app/main/default/objects/Success_Criteria__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <description>Business success criteria should be populated by Sales team during sales cycle

Delivery and Operational success criteria to be captured by PS/Services sales when entering SOW request cycle.  *Note: these criteria will not be captured if services will be fulfilled by a partner.  If this is required, Partner Services should capture.</description>
    <inlineHelpText>On what level does this success criteria reside?</inlineHelpText>
    <label>Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delivery</fullName>
            </value>
            <value>
                <fullName>Operational</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>