Doc/force-app/main/default/objects/Success_Criteria__c/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Name</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Success Criteria</relationshipLabel>
    <relationshipName>Success_Criteria</relationshipName>
    <type>Lookup</type>
</CustomField>