Doc/force-app/main/default/objects/Success_Criteria__c/fields/Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Stage__c</fullName>
    <description>SC-000049</description>
    <formula>TEXT(Opportunity_Name__r.StageName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Stage</label>
    <type>Text</type>
</CustomField>