Doc/force-app/main/default/objects/Success_Criteria__c/recordTypes/Business.recordType-meta.xml
<RecordType>
    <fullName>Business</fullName>
    <active>true</active>
    <description>I See The Results</description>
    <label>Business</label>
</RecordType>