Doc/force-app/main/default/objects/Success_Criteria__c/recordTypes/Delivery.recordType-meta.xml
<RecordType>
    <fullName>Delivery</fullName>
    <active>true</active>
    <description>Finding the right balance between time, scope and budget</description>
    <label>Delivery</label>
</RecordType>