Doc/force-app/main/default/objects/Success_Criteria__c/recordTypes/Operational.recordType-meta.xml
<RecordType>
    <fullName>Operational</fullName>
    <active>true</active>
    <description>I Can Feel It Working</description>
    <label>Operational</label>
</RecordType>