Doc/force-app/main/default/objects/Success_Criteria__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>Level__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Success_Criteria_Details__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>